--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
     <string name="hotel_img5_desc">hotel Image 5</string>
     <string name="hotelUploadProgress">Uploading Your Data.. Please Wait!</string>
     <string name="chooseImgCount">Choose Up To 5 Images</string>
+    <string name="traveler_hotel_title">Explore Hotels</string>
     <!--Benuka Strings end-->
 </resources>
