--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,7 @@
     <string name="edit_hotel">Edit Hotel</string>
     <string name="fav_btn">Add To Favourites</string>
     <string name="fav_title">Your Favourites</string>
+    <string name="searchHotels">Search Hotels</string>
     <!--Benuka Strings end-->
 
 
