--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,6 +203,9 @@
     <string name="todo">TODO</string>
     <string name="string_todo">todo1</string>
     <string name="editTouristAttraction">Edit Tourist Attraction</string>
+    <string name="select_images">Select Images</string>
+    <string name="add_tourist_attraction">Add Tourist Attraction</string>
+    <string name="addTouristAttraction1">Add Tourist Attraction</string>
 
 
 </resources>
