fixing bugs in add hotel, tourist attractions, hotels etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,7 +260,7 @@
     <string name="string_todo">todo1</string>
     <string name="editTouristAttraction">Edit Tourist Attraction</string>
     <string name="select_images">Select Images</string>
-    <string name="add_tourist_attraction">Add Tourist Attraction</string>
+    <string name="add_tourist_attraction">Add Attraction</string>
     <string name="addTouristAttraction1">Add Tourist Attraction</string>
 
 
