changing the icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mad Final Project</string>
+    <string name="app_name">Lounge Buddy</string>
     <string name="landImage">LandImage</string>
     <string name="landPageTopic">Plan Your Trips</string>
     <string name="landinPagePara1">Find Thousands of hotels and </string>
